unpackaged/main/default/objects/CMPL123__MDC_Trigger__c/CMPL123__MDC_Trigger__c.object-meta.xml
<CustomObject>
    <label>MDC Trigger</label>
    <nameField>
        <label>MDC Trigger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDC Triggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>