unpackaged/main/default/objects/CMPL123__MDC_Trigger__c/fields/CMPL123__Active__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </CustomField>