unpackaged/main/default/objects/CMPL123__MDC_Trigger__c/fields/CMPL123__Child_Condition__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Child_Condition__c</fullName>
        <label>Child Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Related Record Added/Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>