unpackaged/main/default/objects/CMPL123__MDC_Trigger__c/fields/CMPL123__Criteria__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Criteria__c</fullName>
        <label>Trigger Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created or Changed</fullName>
                    <default>true</default>
                    <label>Created or Changed</label>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Changed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>