unpackaged/main/default/objects/CMPL123__MDC_Trigger__c/fields/CMPL123__Data__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Data__c</fullName>
        <label>Data</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>