unpackaged/main/default/objects/CMPL123__MDC_Trigger__c/fields/CMPL123__Description__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Description__c</fullName>
        <inlineHelpText>Don't add more than 30000 characters.</inlineHelpText>
        <label>Description</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </CustomField>