unpackaged/main/default/objects/CMPL123__MDC_Trigger__c/fields/CMPL123__Field__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>