unpackaged/main/default/objects/CMPL123__MDC_Trigger__c/fields/CMPL123__Field_Selection__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Field_Selection__c</fullName>
        <label>Field Selection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Child Relations</fullName>
                </value>
                <value>
                    <fullName>Parent Relations</fullName>
                </value>
                <value>
                    <fullName>Object Fields</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>