unpackaged/main/default/objects/CMPL123__MDC_Trigger__c/fields/CMPL123__Logic__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Logic__c</fullName>
        <inlineHelpText>Please Enter you logic for Filed Conditions Exp: 1 AND(2 OR 3)</inlineHelpText>
        <label>Logic</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>