unpackaged/main/default/objects/CMPL123__MDC_Trigger__c/fields/CMPL123__No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__No__c</fullName>
        <label>No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>