unpackaged/main/default/objects/CMPL123__MDC_Trigger__c/fields/CMPL123__Number_of_Acks__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Number_of_Acks__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Number of Acks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>