unpackaged/main/default/objects/CMPL123__MDC_Trigger__c/fields/CMPL123__Public_Group__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Public_Group__c</fullName>
        <description>Select a group for MDC Ticket Acknowledgement</description>
        <label>Public Group</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>