unpackaged/main/default/objects/CMPL123__MDC_Trigger__c/fields/CMPL123__Record_Detail_Field__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Record_Detail_Field__c</fullName>
        <label>Record Detail Field</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>