unpackaged/main/default/objects/CMPL123__MDC_Trigger__c/fields/CMPL123__Related_objects_list__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Related_objects_list__c</fullName>
        <label>Related objects list</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>