unpackaged/main/default/objects/CMPL123__MDC_Trigger__c/fields/CMPL123__Target_Object_User_Fields__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Target_Object_User_Fields__c</fullName>
        <label>Target Object User Fields</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>