unpackaged/main/default/objects/CMPL123__MDC_Trigger__c/fields/CMPL123__Test__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Test__c</fullName>
        <label>Test</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>