unpackaged/main/default/objects/CMPL123__MDC_Trigger__c/fields/CMPL123__Trigger_Criteria__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__Trigger_Criteria__c</fullName>
        <label>Trigger Criteria</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>