unpackaged/main/default/objects/CMPL123__MDC_Trigger__c/fields/CMPL123__User_Field__c.field-meta.xml
<CustomField>
        <fullName>CMPL123__User_Field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Field</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MDC_Triggers</relationshipName>
        <type>Lookup</type>
    </CustomField>