unpackaged/main/default/objects/CMPL123__MDC_Trigger__c/validationRules/CMPL123__Acknowledgment_Required.validationRule-meta.xml
<ValidationRule>
        <fullName>CMPL123__Acknowledgment_Required</fullName>
        <active>false</active>
        <errorConditionFormula>ISNULL($ObjectType.CMPL123__AcknowledgementMapping__c.Fields.CMPL123__PublicGroupAcknowledgment__c )&amp;&amp;   ISNULL(CMPL123__Public_Group__c)</errorConditionFormula>
        <errorMessage>Select at least one Public group or user for Acknowledgement</errorMessage>
    </ValidationRule>