unpackaged/main/default/objects/CMPL123__MDC_Trigger__c/validationRules/CMPL123__Equalto_1.validationRule-meta.xml
<ValidationRule>
        <fullName>CMPL123__Equalto_1</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(CMPL123__Number_of_Acks__c )</errorConditionFormula>
        <errorDisplayField>CMPL123__Number_of_Acks__c</errorDisplayField>
        <errorMessage>Enter value must be equal or greater then 1.</errorMessage>
    </ValidationRule>