unpackaged/main/default/objects/CMPL123__MDC_Trigger__c/listViews/CMPL123__MDC.listView-meta.xml
<ListView>
        <fullName>CMPL123__MDC</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CMPL123__Select_Target_Object__c</columns>
        <columns>CMPL123__Logic__c</columns>
        <columns>CMPL123__Condition__c</columns>
        <columns>CMPL123__Active__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CMPL123__Number_of_Acks__c</columns>
        <columns>CMPL123__Data_Type__c</columns>
        <columns>CMPL123__Field_Name__c</columns>
        <columns>CMPL123__Public_Group__c</columns>
        <columns>CMPL123__User_Field__c</columns>
        <columns>CMPL123__Target_Object_User_Fields__c</columns>
        <filterScope>Everything</filterScope>
        <label>MDC</label>
        <language>en_US</language>
    </ListView>